--- a/backend/bin/src/main/resources/application.properties
+++ b/backend/bin/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bsepDatabase
 
 #Navode se kredencijali za konekciju na server baze
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=firma4
 spring.jpa.defer-datasource-initalizaction=true
 
 #Umesto da sami pi\u0161emo SQL skriptu za kreiranje tabela u bazi, Hibernate kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih (create-drop)
