--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bsepDatabase
 
 #Navode se kredencijali za konekciju na server baze
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=firma4
 spring.jpa.defer-datasource-initalizaction=true
 
 #Umesto da sami pi\u0161emo SQL skriptu za kreiranje tabela u bazi, Hibernate kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih (create-drop)
@@ -38,4 +38,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 spring.jpa.open-in-view=false 
 
 #port na kome se pokrece bek
-server.port=${port:8081}
+server.port=${port:8090}
+server.ssl.enabled = true
+server.ssl.key-store: src/main/resources/bootsecurity.jks
+server.ssl.key-store-password: bootsecurity
+server.ssl.keyStoreType: JKS
+server.ssl.keyAlias: bootsecurity
