--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -44,3 +44,13 @@ server.ssl.key-store: src/main/resources/bootsecurity.jks
 server.ssl.key-store-password: bootsecurity
 server.ssl.keyStoreType: JKS
 server.ssl.keyAlias: bootsecurity
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=isa.projekat.tester@gmail.com
+spring.mail.password=sifrazaisu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.port=8090
