feat: registration and account verification

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -27,6 +27,10 @@
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<!--za jpa-->
 		<dependency>
@@ -67,7 +71,6 @@
 			<version>2.6.0</version>
 		</dependency>
 		<!-- Thanks for using https://jar-download.com -->
-
 
 	</dependencies>
 
