--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,7 +12,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bsepDatabase
 #Navode se kredencijali za konekciju na server baze
 spring.datasource.username=postgres
 spring.datasource.password=firma4
-spring.jpa.defer-datasource-initalizaction=true
 
 #Umesto da sami pi\u0161emo SQL skriptu za kreiranje tabela u bazi, Hibernate kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih (create-drop)
 #https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
@@ -20,7 +19,7 @@ spring.jpa.defer-datasource-initalizaction=true
 spring.jpa.hibernate.ddl-auto = update
 
 #Hibernate SQL upiti se ispisuju na IDE konzoli
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 
 #formatira ispis SQL upita koje Hibernate pravi ka bazi na IDE konzoli
 spring.jpa.properties.hibernate.format_sql=true
@@ -38,18 +37,19 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 spring.jpa.open-in-view=false 
 
 #port na kome se pokrece bek
-server.port=${port:8090}
-server.ssl.enabled = true
-server.ssl.key-store: src/main/resources/bootsecurity.jks
-server.ssl.key-store-password: bootsecurity
-server.ssl.keyStoreType: JKS
-server.ssl.keyAlias: bootsecurity
+#server.port=${port:8090}
+#server.ssl.enabled = true
+#server.ssl.key-store: src/main/resources/bootsecurity.jks
+#server.ssl.key-store-password: bootsecurity
+#server.ssl.keyStoreType: JKS
+#server.ssl.keyAlias: bootsecurity
 
+#Za slanje Emaila
 spring.mail.protocol=smtp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=isa.projekat.tester@gmail.com
-spring.mail.password=sifrazaisu
+spring.mail.username=mihailomajstorovic47@gmail.com
+spring.mail.password=xfnghjmyxqvregvh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
