feat: certificate and frontend changes

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,12 +37,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 spring.jpa.open-in-view=false 
 
 #port na kome se pokrece bek
-#server.port=${port:8090}
-#server.ssl.enabled = true
-#server.ssl.key-store: src/main/resources/bootsecurity.jks
-#server.ssl.key-store-password: bootsecurity
-#server.ssl.keyStoreType: JKS
-#server.ssl.keyAlias: bootsecurity
+server.port=${port:8090}
+server.ssl.enabled = true
+server.ssl.key-store: src/main/resources/bootsecurity.jks
+server.ssl.key-store-password: bootsecurity
+server.ssl.keyStoreType: JKS
+server.ssl.keyAlias: bootsecurity
 
 #Za slanje Emaila
 spring.mail.protocol=smtp
@@ -52,5 +52,3 @@ spring.mail.username=mihailomajstorovic47@gmail.com
 spring.mail.password=xfnghjmyxqvregvh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-server.port=8090
