--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<sonar.organization>nevenaatic</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -67,6 +69,7 @@
 			<version>2.6.0</version>
 		</dependency>
 		<!-- Thanks for using https://jar-download.com -->
+
 
 
 	</dependencies>
