--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,12 +11,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bsepDatabase
 
 #Navode se kredencijali za konekciju na server baze
 spring.datasource.username=postgres
-spring.datasource.password=firma4
+spring.datasource.password=postgres
 
 #Umesto da sami pi\u0161emo SQL skriptu za kreiranje tabela u bazi, Hibernate kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih (create-drop)
 #https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
 #Ako \u017Eelimo sami da kreiramo skriptu za kreiranje tabela potrebno je u src/main/resources folderu kreirati i popuniti fajl pod nazivom schema.sql koji \u0107e Spring Boot automatski pokrenuti pri pokretanju aplikacije
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 #Hibernate SQL upiti se ispisuju na IDE konzoli
 spring.jpa.show-sql = false
@@ -38,11 +38,11 @@ spring.jpa.open-in-view=false
 
 #port na kome se pokrece bek
 server.port=${port:8090}
-server.ssl.enabled = true
-server.ssl.key-store: src/main/resources/bootsecurity.jks
-server.ssl.key-store-password: bootsecurity
-server.ssl.keyStoreType: JKS
-server.ssl.keyAlias: bootsecurity
+#server.ssl.enabled = true
+#server.ssl.key-store: src/main/resources/bootsecurity.jks
+#server.ssl.key-store-password: bootsecurity
+#server.ssl.keyStoreType: JKS
+#server.ssl.keyAlias: bootsecurity
 
 #Za slanje Emaila
 spring.mail.protocol=smtp
