--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.password=postgres
 #Umesto da sami pi\u0161emo SQL skriptu za kreiranje tabela u bazi, Hibernate kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih (create-drop)
 #https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
 #Ako \u017Eelimo sami da kreiramo skriptu za kreiranje tabela potrebno je u src/main/resources folderu kreirati i popuniti fajl pod nazivom schema.sql koji \u0107e Spring Boot automatski pokrenuti pri pokretanju aplikacije
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 #Hibernate SQL upiti se ispisuju na IDE konzoli
 spring.jpa.show-sql = false
