--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,11 +38,11 @@ spring.jpa.open-in-view=false
 
 #port na kome se pokrece bek
 server.port=${port:8090}
-#server.ssl.enabled = true
-#server.ssl.key-store: src/main/resources/bootsecurity.jks
-#server.ssl.key-store-password: bootsecurity
-#server.ssl.keyStoreType: JKS
-#server.ssl.keyAlias: bootsecurity
+server.ssl.enabled = true
+server.ssl.key-store: src/main/resources/bootsecurity.jks
+server.ssl.key-store-password: bootsecurity
+server.ssl.keyStoreType: JKS
+server.ssl.keyAlias: bootsecurity
 
 #Za slanje Emaila
 spring.mail.protocol=smtp
