--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -30,7 +30,8 @@ log4j.appender.logFile2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} | %-5p 
 log4j.appender.logFile3=org.apache.log4j.RollingFileAppender
 log4j.appender.logFile3.file=D:\\warnLog\\WARN.log
 log4j.appender.logFile3.MaxlogFile3Size=5MB
-log4j.appender.logFile3.MaxBackupIndex=10
+#deleting after 10 days
+log4j.appender.logFile3.MaxBackupIndex=10 
 log4j.appender.logFile3.layout=org.apache.log4j.PatternLayout
 log4j.appender.logFile3.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} | %-5p | %c{1}:%L - %m%n
 
