--- a/NodeAuthenticatorServer/package.json
+++ b/NodeAuthenticatorServer/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "node-json-db": "^1.5.0",
     "qrcode": "^1.5.0",
     "speakeasy": "^2.0.0"
   }
