--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -93,6 +93,11 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.sonarsource.api.plugin</groupId>
+		    <artifactId>sonar-plugin-api</artifactId>
+		    <version>9.5.0.71</version>
+		</dependency>
 
 
 		<!-- ukljucena podrska za rad sa JWT -->
