--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -3,4 +3,4 @@ sonar.projectKey=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
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=.
+#sonar.sources=.
