feat:  log dictionary

--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -12,24 +12,24 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} | %-5p | 
 
 # Redirect log messages to a log logFile1, support logFile1 rolling.
 log4j.appender.logFile1=org.apache.log4j.RollingFileAppender
-log4j.appender.logFile1.file=E:\\errorLog\\ERROR.log
-log4j.appender.logFile1.MaxlogFile1Size=5MB
+log4j.appender.logFile1.file=C:\\errorLog\\ERROR.log
+log4j.appender.logFile1.MaxFileSize=5MB
 log4j.appender.logFile1.MaxBackupIndex=10
 log4j.appender.logFile1.layout=org.apache.log4j.PatternLayout
 log4j.appender.logFile1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} | %-5p | %c{1}:%L - %m%n
 
 # Redirect log messages to a log logFile1, support logFile1 rolling.
 log4j.appender.logFile2=org.apache.log4j.RollingFileAppender
-log4j.appender.logFile2.file=E:\\infoLog\\INFO.log
-log4j.appender.logFile2.MaxlogFile2Size=5MB
+log4j.appender.logFile2.file=C:\\infoLog\\INFO.log
+log4j.appender.logFile2.maxFileSize=5MB
 log4j.appender.logFile2.MaxBackupIndex=10
 log4j.appender.logFile2.layout=org.apache.log4j.PatternLayout
 log4j.appender.logFile2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} | %-5p | %c{1}:%L - %m%n
 
 # Redirect log messages to a log logFile1, support logFile1 rolling.
 log4j.appender.logFile3=org.apache.log4j.RollingFileAppender
-log4j.appender.logFile3.file=E:\\warnLog\\WARN.log 
-log4j.appender.logFile3.MaxlogFile3Size=5MB
+log4j.appender.logFile3.file=C:\\warnLog\\WARN.log 
+log4j.appender.logFile3.maxFileSize=5MB
 #deleting after 10 days
 log4j.appender.logFile3.MaxBackupIndex=10 
 
