--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -59,7 +59,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
-
+		<dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-ext-debug-jdk14</artifactId>
+            <version>1.68</version>
+        </dependency>
 
 		<dependency>
     <groupId>org.bouncycastle</groupId>
